# nfl

./: .gitignore  Makefile
app/: app.py  pyproject.toml  requirements.txt
app/.chalice/: config.json  policy.json
app/chalicelib/: __init__.py  data_table.py  dbinitlib.py  scraper.py  scraperlib.py  site_gen.py  sitegen.py  sitegenlib.py  table.py  ticker.py  tickerlib.py  utils.py
infra/: chalice.tf.json  main.tf
scraper/: dynamo.ipynb  scrape_calendar.ipynb
utils/: hack_terraform.py  notes.txt
